--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 	"type": "module",
 	"dependencies": {
 		"d3": "^7.8.5",
-		"mapbox-gl": "^3.1.2"
+		"mapbox-gl": "^3.1.2",
+		"svelte-range-slider-pips": "^2.3.1"
 	}
 }
